--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,6 +32,8 @@
 
     </div>
 
+    <div class="thief"></div>
+
     <script type="text/javascript" src="../static/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../static/js/main.js"></script>
 </body>
