添加游戏结束部分

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,14 +26,22 @@
 </head>
 
 <body>
-    
-    
-    <div class="control">
-
+    <div class="indexbg">
     </div>
-
-    <div class="thief"></div>
-
+    <div class="control">
+        <img src="../static/images/father.png">
+    </div>
+    <div class="over">
+        <img src="../static/images/over.png">
+        <ul class="btnsList">
+            <li class="btn viewrank">
+                <img src="../static/images/viewrank.png">
+            </li>
+            <li class="btn again">
+               <img src="../static/images/again.png"> 
+            </li>
+        </ul>
+    </div>
     <script type="text/javascript" src="../static/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../static/js/main.js"></script>
 </body>
