--- a/src/static/style/style.css
+++ b/src/static/style/style.css
@@ -119,36 +119,114 @@ html{
 body{
     height: 100%;
     width: 100%;
+    background: url(../images/indexbg.png) no-repeat;
+    background-size: 100%;   
     overflow: hidden;
+}
+
+
+/*游戏样式*/
+
+.indexbg{
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
 }
 
 .control {
     position: absolute;
-    width: 0.7rem;
-    height: 0.7rem;
-    background-color: red;
+    top: 0;
+    left: 0;
+    width: 1.4rem;
+    height: 2.06rem;
 }
 
 .thiefleft{
     position: absolute;
-    width: 0.5rem;
-    height: 0.5rem;
-    background-color: black;
+    width: 1.17rem;
+    height: 1.48rem;
 }
 
 .thieftop{
     position: absolute;
-    width: 0.5rem;
-    height: 0.5rem;
-    background-color: black;
+    top: -1.48rem;
+    width: 1.17rem;
+    height: 1.48rem;
+
 }
 
 .thiefright{
     position: absolute;
-    width: 0.5rem;
-    height: 0.5rem;
-    background-color: black;
+    width: 1.17rem;
+    height: 1.48rem;
+
 }
+
+.over{
+    position: relative;
+    display: none;
+    margin: 0 auto;
+    top: -9.5rem;
+    width: 6.08rem;
+    height: 6.53rem;
+    z-index: 1000;
+}
+
+.close{
+    position: absolute;
+
+}
+
+.btnsList{
+    position: relative;
+    top: -2.3rem;
+    width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+}   
+
+.again{
+    float: left;
+}
+
+.viewrank{
+    float: right;
+}
+
+
+/*开始样式*/
+
+
+.main{
+    width: 100%;
+    height: 100%;
+    background: url(../images/bg.png);
+    background-size: 100% 100%;
+}
+
+.voiceList{
+    width: 1.8rem;
+    height: 0.7rem;
+}
+
+.logo{
+    margin: 0 auto;
+    width: 4.8rem;
+    text-align: center;
+}
+
+.btns{
+    width: 3.2rem;
+    margin: 0 auto;
+    margin-top: 4.8rem;
+}
+
+
+
+
+
 
 /*
 .seconds{
